k8s/cluster-objects/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka1
  template:
    metadata:
      labels:
        app: kafka1
    spec:
      containers:
        - name: kafka1
          image: confluentinc/cp-kafka:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka3
  template:
    metadata:
      labels:
        app: kafka3
    spec:
      containers:
        - name: kafka3
          image: confluentinc/cp-kafka:latest
