k8s/cluster-objects/kafka-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka1
spec:
  selector:
    app: kafka1
  ports:
    - protocol: TCP
      port: 9998
      targetPort: 9092
      nodePort: 30091
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: kafka3
spec:
  selector:
    app: kafka3
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9092
      nodePort: 30092
  type: NodePort
  

---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-manager
spec:
  selector:
    app: kafka-manager
  ports:
    - protocol: TCP
      port: 4466
      targetPort: 9000
  type: NodePort
