k8s/cluster-objects/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
spec:
  rules:
    - host: "mario.net"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kafka-manager
                port:
                  number: 4466
